testsuite/tests/roles/should_compile/T16718.hs
{-# LANGUAGE RoleAnnotations, TemplateHaskell #-}

module T16718 where

$([d| type role P phantom
      data P a
    |])
